--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,8 @@ local_settings.py
 db.sqlite3
 db.sqlite3-journal
 media
-
+config_secret
+settings_common.json
 # elastic Beanstalk Files
 .elasticbeanstalk/*
 !.elasticbeanstalk/*.cfg.yml
