--- a/requirements.txt
+++ b/requirements.txt
@@ -21,7 +21,11 @@ jmespath==0.9.4
 pathspec==0.5.9
 Pillow==6.1.0
 psycopg2-binary==2.8.4
+pypiwin32==223
+python-dateutil==2.8.0
 pytz==2019.2
+pywin32==226
+PyYAML==3.13
 requests==2.20.1
 s3transfer==0.2.1
 semantic-version==2.5.0
