add reservation app

--- a/config_secret/settings_common.json
+++ b/config_secret/settings_common.json
@@ -1,7 +1,7 @@
 {
     "aws": {
-      "access_key_id": "AKIAV3TGSJWYJCT5ZKPK",
-      "secret_access_key": "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",
+      "access_key_id": "AKIAV3TGSJWYCO364ZG4",
+      "secret_access_key": "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",
       "s3_bucket_name": "footballlover"
     }
   }
