--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,8 @@ db.sqlite3-journal
 media
 config_secret
 settings_common.json
+.bash_profile
+bash_profile
 # elastic Beanstalk Files
 .elasticbeanstalk/*
 !.elasticbeanstalk/*.cfg.yml
