--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ config_secret
 settings_common.json
 .bash_profile
 bash_profile
+venv/
 # elastic Beanstalk Files
 .elasticbeanstalk/*
 !.elasticbeanstalk/*.cfg.yml
